# agent-courses

./: .gitignore  Cargo.toml  README.md
crates/agent_core/: Cargo.toml
crates/course_cli/: Cargo.toml
docs/: rust-porting-notes.md
week1/context/: Cargo.toml  README.md
week1/learning-from-experience/: Cargo.toml  README.md
week1/search-codegen/: Cargo.toml  README.md  go_python_comparison.md
week1/web-search-agent/: Cargo.toml  README.md
week2/attention_visualization/: Cargo.toml  README.md
week2/context-compression/: Cargo.toml  README.md
week2/kv-cache/: Cargo.toml  README.md
week2/local_llm_serving/: Cargo.toml  README.md
week2/log-sanitization/: Cargo.toml  README.md
week2/prompt-engineering/: Cargo.toml  GPT5_CONFIGURATION.md  README.md  wiki_airline_randomized.md  wiki_retail_randomized.md
week2/system-hint/: CHANGELOG.md  Cargo.toml  NOTES.md  README.md
week2/user-memory/: Cargo.toml  PROVIDERS.md  README.md
week2/user-memory-evaluation/: Cargo.toml  FRAMEWORK_SUMMARY.md  README.md  TEST_FRAMEWORK_GUIDE.md  test_case_specifications.md
week3/agentic-rag/: Cargo.toml  README.md  README_LEGAL_INDEXING.md
week3/agentic-rag-for-user-memory/: Cargo.toml  LLM_EVALUATION.md  README.md  RETRIEVAL_PIPELINE_INTEGRATION.md
week3/browser-use-rpa/: Cargo.toml  IMPLEMENTATION_DETAILS.md  README.md
week3/contextual-retrieval/: Cargo.toml  README.md  README_LEGAL_INDEXING.md  SEMANTIC_IDS.md
week3/contextual-retrieval-for-user-memory/: Cargo.toml  LLM_EVALUATION.md  README.md  RETRIEVAL_PIPELINE_INTEGRATION.md
week3/dense-embedding/: Cargo.toml  README.md
week3/gaia-experience/: Cargo.toml  README.md  (+1 more)
week4/: DOCKER_DEPLOYMENT.md
(+149 files in other folders)
